# GONet_Wizard

./: .buildinfo  .coveragerc  .gitignore  CHANGELOG.md  GONet_dashboard.html  GONet_utils.html  LICENSE  MANIFEST.in  README.md  README.rst  _version.html  cli.html  commands.html  extraction_circle.json  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  settings.html  setup.py  t.py
.doctrees/: GONet_dashboard.doctree  GONet_utils.doctree  _version.doctree  cli.doctree  commands.doctree  index.doctree  installation.doctree  settings.doctree
.doctrees/commands/: connect.doctree  run_dashboard.doctree  show.doctree  show_meta.doctree  snap.doctree  terminate.doctree
.doctrees/dashboard/: app.doctree  callbacks.doctree  env.doctree  hood.doctree  layout.doctree  server.doctree  utils.doctree  wsgi.doctree
.doctrees/utils/: extract.doctree  gonetfile.doctree  raw_data.doctree
.github/workflows/: deploy-docs.yml  package-macos.yml  package-windows.yml  tests.yml
GONet_Wizard/: __init__.py  __main__.py  _branding.py  _version.py  cli.py  desktop.py  logging_utils.py  paths.py  resources.py  settings.py
GONet_Wizard/GONet_dashboard/: __init__.py
GONet_Wizard/GONet_utils/: __init__.py
GONet_Wizard/commands/: __init__.py  argparse_errors.py  build_full_array.py  cli_core.py  connect.py  extract.py  gui.py  inputs.py  parser_builder.py  run_dashboard.py  settings.py  show.py  show_meta.py  show_meta_session.py  smart_parser.py  snap.py  specs.py  split_raw.py  terminate_imaging.py  ui_bridge.py
GONet_Wizard/gui/: __init__.py  web.py
GONet_Wizard/gui_launcher/: api.py  launcher.py
GONet_Wizard/ui/: __init__.py  api.py  dash_runner.py  launch_forms.py  preview.py  runtime.py  server.py  windows.py
_modules/: index.html
_modules/GONet_Wizard/: __main__.html  settings.html
_sources/: _version.rst.txt  cli.rst.txt
_sources/commands/: snap.rst.txt
_sources/dashboard/: app.rst.txt
_sources/utils/: extract.rst.txt
_static/: documentation_options.js
build_tools/macos/: README.md  build_dmg.sh
build_tools/pyinstaller/: README.md  _runtime_selection.py  gonet_wizard_cli.spec  (+1 more)
commands/: connect.html  run_dashboard.html  show.html  show_meta.html  snap.html  terminate.html
dashboard/: app.html  callbacks.html  env.html  hood.html  layout.html  server.html  utils.html  wsgi.html
src/: GONet_utils.py
tests/: Dolus_expected_meta.json  TEST_AUDIT.md  _plt_patch.py  conftest.py  test_camera_commands.py  test_cli_builder_inputs.py  test_cli_routing.py  test_dark_correction.py  test_dashboard_callbacks_helpers.py  test_dashboard_loaders.py  test_extract_command_more.py  test_extract_shapes.py  test_extract_shapes_more.py  test_extract_window_lifecycle.py  test_extractor_pipeline.py  test_extractors_more.py  test_full_array.py  test_gonet_file_raw.py  test_gui_form_page.py  test_gui_web_payload.py  test_gui_web_terminal.py  test_json_save_helpers.py  test_loading.py  test_main_branding.py  test_operations.py  test_packaging_paths.py  test_regressions.py  test_show.py  test_show_files.py  test_show_meta.py  test_split_raw_command.py  test_ui_bridge.py  test_ui_server_readiness.py  test_writing.py
utils/: extract.html  gonetfile.html  raw_data.html
(+302 files in other folders)
