[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "GONet_Wizard"
dynamic = ["version"]
description = "Tools and methods to handle GONet data."
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE*"]

authors = [{ name = "Giacomo Terreran", email = "gterreran@adlerplanetarium.org" }]

dependencies = [
  "numpy",
  "pillow",
  "matplotlib",
  "pandas",
  "tifffile==2023.7.10",
  "python-dateutil",
  "dash==2.18.2",
  "flask",
  "plotly>=6.1.1",
  "kaleido>=1.0.0",
  "reportlab",
  "dash-extensions",
  "dash_daq",
  "python-dotenv",
  "PyYAML",
  "paramiko",
  "scp",
  "astropy",
  "scipy",
  "pywebview",
  "astroplan",
  "meteostat==1.7.6",
  "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = ["sphinx>=7.0", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "myst-parser"]
build = ["pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/gterreran/GONet_Wizard"
Source = "https://github.com/gterreran/GONet_Wizard"
Issues = "https://github.com/gterreran/GONet_Wizard/issues"

[project.scripts]
GONet_Wizard = "GONet_Wizard.__main__:main"
gonet-wizard = "GONet_Wizard.__main__:main"

[project.gui-scripts]
GONet_Wizard_GUI = "GONet_Wizard.desktop:main"
gonet-wizard-gui = "GONet_Wizard.desktop:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["GONet_Wizard*"]
exclude = ["build_tools*", "docs*", "tests*"]
namespaces = false

[tool.setuptools.package-data]
GONet_Wizard = [
  "GONet_utils/src/*.yaml",
  "gui/templates/**/*.html",
  "static/**/*",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*FigureCanvasAgg is non-interactive.*"]
